--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
 <!-- partial:index.partial.html -->
 
 <main>
-	<a><h2>Cara Menampikan Video</h2></a>
+	<a><h2>Cara Menampikan Video On VPN</h2></a>
 		<p><a>- Download Apk Vpn </a> <a href="https://play.google.com/store/apps/details?id=com.lipisoft.quickvpn">  Quickvpn</a></p>
 		<p><a>- Selesai Download Masuk Apknya, pilih server singapore </a></p>
 		<p><a>- Lalu click tanda panah ke atas, pojok kanan bawah</a></p>
 		<p><a>- Setelah aktif ada tanda kunci di bar atas, click open </a></p>
+		
+  <div id="buttons">
+      <b><a><script src="./refresh.js"  id="myButton" class="btn btn-1">Open</script></a></b>
+  </div>
+</main>
+
+<main>
+	<a><h2>Cara Menampikan Video No VPN</h2></a>
+		<p><a>- Web ini tidak memakai Apk Vpn </a></p>
+		<p><a>- Click Open untuk mengunjungi web tersebut </a></p>
 		
   <div id="buttons">
       <b><a><script src="./refresh.js"  id="myButton" class="btn btn-1">Open</script></a></b>
