--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
       <b><a><script src="./refresh.js"  id="myButton" class="btn btn-1">Open</script></a></b>
   </div>
 </main>
-
+	
+<br/>
 <main>
 	<a><h2>Cara Menampikan Video No VPN</h2></a>
 		<p><a>- Web ini tidak memakai Apk Vpn </a></p>
 		<p><a>- Click Open untuk mengunjungi web tersebut </a></p>
 		
   <div id="buttons">
-      <b><a><script src="./refresh.js"  id="myButton" class="btn btn-1">Open</script></a></b>
+      <b><a><script src="MvKu/tidak/refresh.js"  id="myButton" class="btn btn-1">Open</script></a></b>
   </div>
 </main>
 <!-- partial -->
